# Autotrade

./: .gitignore  API_FIX_COMPLETE.md  API_TEST_RESULTS.md  ARCHITECTURE_PLAN_V2.md  ASSUMPTION_BASED_IMPLEMENTATIONS.md  ATM_WATCH_QUICK_WINS_IMPLEMENTATION.md  BENCHMARK_RESULTS_ANALYSIS.md  BROADCAST_ARCHITECTURE_ANALYSIS.md  BROADCAST_ARCHITECTURE_CRITIQUE.md  BROADCAST_ARCHITECTURE_DEEP_ANALYSIS.md  BROADCAST_IMPLEMENTATION_SUMMARY.md  BSE_Implementation_Checklist.md  BSE_LOADING_DIAGNOSTIC.md  BSE_SEARCH_FIX_COMPLETE.md  BSE_SEARCH_ROOT_CAUSE.md  BUILD_SUCCESS.md  CHART_TOKEN_FIX_PLAN.md  CHECKLIST.md  CMakeLists.txt  CMakeLists.txt.backup  CRASH_FIX_SPLASHSCREEN.md  CROSS_PLATFORM_BUILD_SUMMARY.md  DEPENDENCIES.md  DEV_MODE_GUIDE.md  DISTRIBUTED_PRICE_CACHE_ARCHITECTURE.md  DISTRIBUTED_STORE_VERIFICATION.md  FIXES_COMPLETE.md  FOCUS_MANAGEMENT_IMPLEMENTATION.md  FRESH_INSTALL_GUIDE.md  GATE1_INTEGRATION_TEST_GUIDE.md  IMPLEMENTATION_STATUS.md  INDICATOR_CHART_QUICK_START.md  INSTALL_DEPENDENCIES.md  LATENCY_FIX_SUMMARY.md  LATENCY_TRACKING_COMPLETE.md  LOGIN_DEBUG_REPORT.md  MANUAL_TEST_GUIDE.md  MARKETWATCH_FIX_SUMMARY.md  MASTER_DATA_AND_SCRIP_SEARCH_ANALYSIS.md  MASTER_DATA_COLUMN_ANALYSIS.md  (+95 more)
lib/: CMakeLists.txt
lib/cpp_broacast_nsefo/: .gitignore  DECOMPRESSION_SUCCESS.md  bc_messagecode_list.md  captured_output.txt  check_offsets.cpp  config.ini.example  final_verification.txt  message_data.md  updated_output.txt
lib/cpp_broadcast_bsefo/: CMakeLists.txt  message_code.md
lib/cpp_broadcast_nsecm/: ADDING_NEW_MESSAGE_CODE.md  ARCHITECTURE_ANALYSIS_CONSOLIDATED_ARRAY_PLACEMENT.md  CMakeLists.txt  CONSOLIDATED_ARRAY_STRATEGY.md  config.ini.example
lib/cpp_broadcast_nsefo/: CMakeLists.txt  nse_trimm_protocol_fo.md
lib/lzo-2.10/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main_work.cpp
src/api/: CMakeLists.txt  NativeHTTPClient.cpp  NativeWebSocketClient.cpp  SocketIOInteractiveClient.cpp  TokenSubscriptionManager.cpp  UDPBroadcastProvider.cpp  XTSInteractiveClient.cpp  XTSMarketDataClient.cpp
src/app/: AppBootstrap.cpp  MainWindow.cpp  ScripBar.cpp  ScripBar.cpp.old  ScripBar.cpp.ui_backup  SnapQuoteScripBar.cpp  WindowFactory.cpp  WorkspaceManager.cpp
src/core/: CMakeLists.txt  GlobalConnections.cpp  GlobalShortcuts.cpp  WindowCacheManager.cpp
src/data/: CMakeLists.txt  Greeks.cpp  MarketDataAggregator.cpp  PriceStoreGateway.cpp  SymbolCacheManager.cpp
src/indicators/: CMakeLists.txt  TALibIndicators.cpp
src/models/: CMakeLists.txt  MarketWatchColumnProfile.cpp  MarketWatchModel.cpp  OrderModel.cpp  PinnedRowProxyModel.cpp  PositionModel.cpp  StrategyFilterProxyModel.cpp  StrategyTableModel.cpp  TokenAddressBook.cpp  TradeModel.cpp
src/quant/: CMakeLists.txt  Greeks.cpp  IVCalculator.cpp  TimeToExpiry.cpp
src/repository/: BSECMRepository.cpp  BSEFORepository.cpp  CMakeLists.txt  Greeks.cpp  IVCalculator.cpp  MasterFileParser.cpp  NSECMRepository.cpp  NSEFORepository.cpp  NSEFORepositoryPreSorted.cpp  RepositoryManager.cpp
src/search/: CMakeLists.txt  SearchTokenizer.cpp  SearchTokenizer.h
src/services/: ATMWatchManager.cpp  CMakeLists.txt  CandleAggregator.cpp  ConnectionStatusManager.cpp  FeedHandler.cpp  GreeksCalculationService copy.cpp  GreeksCalculationService.cpp  HistoricalDataStore.cpp  LoginFlowService.cpp  MasterDataState.cpp  MasterLoaderWorker.cpp  PriceCache.cpp  PriceCacheZeroCopy.cpp  PriceCacheZeroCopy_v2.cpp  StrategyRepository.cpp  StrategyService.cpp  StrategyTemplateRepository.cpp  TokenSubscriptionManager.cpp  TradingDataService.cpp  UdpBroadcastService.cpp  XTSFeedBridge.cpp
src/strategies/: CustomStrategy.cpp  JodiATMStrategy.cpp  LiveFormulaContext.cpp  MomentumStrategy.cpp  RangeBreakoutStrategy.cpp  StrategyBase.cpp  StrategyFactory.cpp  TemplateStrategy.cpp
src/strategy/: CMakeLists.txt  FormulaEngine.cpp  IndicatorEngine.cpp  OptionsExecutionEngine.cpp  OrderExecutionEngine.cpp  StrategyParser.cpp
src/ui/: ATMWatchSettingsDialog.cpp  ATMWatchWindow.cpp  BroadcastSettingsDialog.cpp  BuyWindow.cpp  CMakeLists.txt  ConditionBuilderWidget.cpp  ConnectionBarWidget.cpp  CreateStrategyDialog.cpp  CustomChartView.cpp  CustomMDIArea.cpp  CustomMDIChild.cpp  CustomMDISubWindow.cpp  CustomMainWindow.cpp  CustomScripComboBox.cpp  CustomScripComboBox.cpp.backup  CustomTitleBar.cpp  GlobalSearchWidget.cpp  IndicatorCatalog.cpp  IndicatorChartWidget.cpp  IndicatorPickerDialog.cpp  IndicatorRowWidget.cpp  InfoBar.cpp  LoginWindow.cpp  MDITaskBar.cpp  MainWindow.cpp  MarketWatchModel.cpp  MarketWatchWindow.cpp  ModifyParametersDialog.cpp  OptionCalculatorWindow.cpp  OptionChainWindow.cpp  OptionChainWindow_backup.cpp  ParamEditorDialog.cpp  PositionWindow.cpp  ScripBar.cpp  ScripBar.cpp.bak  SellWindow.cpp  SnapQuoteWindow.cpp  SplashScreen.cpp  StrategyBuilderDialog.cpp  StrategyDeployDialog.cpp  (+7 more)
src/utils/: CMakeLists.txt  ClipboardHelpers.cpp  ConfigLoader.cpp  DateUtils.cpp  FileLogger.cpp  FileLogger.h  LicenseManager.cpp  MemoryProfiler.cpp  PreferencesManager.cpp  SelectionHelpers.cpp  SoundManager.cpp  WindowManager.cpp
tests/: BENCHMARK_MODEL_UPDATES_README.md  CMakeLists.txt  MASTER_FILE_ANALYZER_README.md  QUICK_START_BENCHMARK.md  README.md  README_ATM_PROFILER.md  TestReviewer.h  benchmark_comparison.cpp  benchmark_greeks.cpp  benchmark_imgui_vs_qt.cpp  benchmark_model_update_methods  benchmark_model_update_methods.cpp  benchmark_price_cache  benchmark_price_cache.cpp  benchmark_qt_vs_native.cpp  benchmark_repository_filters.cpp  benchmark_repository_simple.cpp  build_profiler.bat  hello.cpp  master_file_analyzer  master_file_analyzer.cpp  simple_load_test.cpp  test_7207_standalone.cpp  test_7207_standalone_v2.cpp  test_all_msg_codes.cpp  test_atm_profiler_standalone.cpp  test_bse_parser.cpp  test_condition_evaluation.cpp  test_formula_engine.cpp  test_global_search.cpp  test_greeks_iv.cpp  test_ia_data_native  test_ia_data_native.cpp  test_index_broadcast.cpp  test_interactive_api  test_interactive_api.cpp  test_market_watch_model.cpp  test_marketdata_api  test_marketdata_api.cpp  test_master_loading  (+8 more)
(+925 files in other folders)
